<resources>
    <string name="app_name">VotingSystem</string>
    <string name="dashboard_activity">DashboardActivity</string>
    <string name="surveys_activity">SurveysActivity</string>
    <string name="survey_questions_activity">SurveyQuestionsActivity</string>
    <string name="search_results_activity">SearchResultsActivity</string>
    <string name="welcome_text">Καλωσήρθατε!</string>
    <string name="yes">yes</string>
    <string name="database">SurveysDB</string>
    <string name="surveys_table">Surveys</string>
    <string name="jnct_table">Jnct_firm_surveys</string>
    <string name="recent_sear_table">Recent_searches</string>
    <string name="splash_loaded">splash_loaded</string>
    <string name="gcm_senderId">747222558005</string>
    <string name="data">data</string>
    <string name="mailto">mailto:</string>
    <string name="open_with">Άνοιγμα με</string>
    <string name="notification_title">title</string>
    <string name="notification_body">body</string>
    <string name="action">action</string>
    <string name="email_notification">email_notification</string>
    <string name="new_user_survey_notification">new_user_survey_notification</string>
    <string name="tag">tag</string>
    <string name="code">code</string>
    <string name="splashscreen_fgmt">splashScreenFgmt</string>
    <string name="signin_fgmt">signInFgmt</string>
    <string name="forgotpassword_fgmt">forgotPasswordFgmt</string>
    <string name="register_fgmt">registerFgmt</string>
    <string name="dashboard_fgmt">dashboardFgmt</string>
    <string name="survey_questions_fgmt">surveyQuestionsFgmt</string>
    <string name="survey_stats_fgmt">surveyStatsFgmt</string>
    <string name="survey_details_fgmt">surveyDetailsFgmt</string>
    <string name="new_survey_details_fgmt">newSurveyDetails</string>
    <string name="new_survey_question_fgmt">newSurveyQuestion</string>
    <string name="error_fgmt">errorFgmt</string>
    <string name="editext">editext</string>
    <string name="spinner">spinner</string>
    <string name="user_id">user_id</string>
    <string name="firm_id">firm_id</string>
    <string name="survey_id">survey_id</string>
    <string name="selected">selected</string>
    <string name="collapsed">collapsed</string>
    <string name="expanded">expanded</string>
    <string name="done">done</string>
    <string name="forward">forward</string>
    <string name="connection_status">connection_status</string>
    <string name="title">title</string>
    <string name="data_picker">datapicker</string>
    <string name="dialog">dialog</string>
    <string name="tag_new">new</string>
    <string name="key">key</string>
    <string name="tag_answers">answers</string>
    <string name="mandatory">mandatory</string>
    <string name="is_single_choice">is_single_choice</string>
    <string name="content_desc">content_desc</string>
    <string name="search">Aναζήτηση</string>
    <string name="search_hint">Aναζήτηση Έρευνας</string>
    <string name="arrow_back">arrow_back</string>
    <string name="clear">clear</string>
    <string name="register_user">register_user</string>
    <string name="reset_password">reset_password</string>
    <string name="login_user">login_user</string>
    <string name="get_firm_names">firm_names</string>
    <string name="get_firm_survey_details">firm_survey_details</string>
    <string name="more">Περισσοτερα</string>
    <string name="check_connection">Έλεγξε τη σύνδεση σου</string>
    <string name="error">error</string>
    <string name="show">ΕΜΦΑΝΙΣΗ</string>
    <string name="hide">ΑΠΟΚΡΥΨΗ</string>
    <string name="empty_string">""</string>
    <string name="middle_animation">middle</string>
    <string name="final_animation">final</string>
    <string name="list_surveys">list_surveys</string>
    <string name="list_user_surveys">list_user_surveys</string>
    <string name="get_survey_questions">survey_questions</string>
    <string name="on_fab_clicked">on_fab_clicked</string>
    <string name="on_question_btn_clicked">on_question_btn_clicked</string>
    <string name="get_survey_stats">survey_stats</string>
    <string name="details_activ_action_key">details_activ_action_key</string>
    <string name="show_stats">show_stats</string>
    <string name="show_details">show_details</string>
    <string name="active_since_action">active_since</string>
    <string name="valid_until_action">valid_until</string>
    <string name="add">add</string>
    <string name="edit">edit</string>
    <string name="del">delete</string>
    <string name="delete">Διαγραφη</string>
    <string name="manipulate_user_survey">manipulate_user_survey</string>
    <string name="theme">theme</string>
    <string name="app_logo">app_logo</string>
    <string name="fromshared_logo_trns">fromsharedlogoTrns</string>
    <string name="toshared_logo_trns">tosharedlogoTrns</string>
    <string name="input_logo">input_logo</string>
    <string name="username">Όνομα χρήστη</string>
    <string name="password">Κωδικός πρόσβασης</string>
    <string name="signin">Είσοδος</string>
    <string name="forgotpassword">Ξέχασες τον κωδικό σου?</string>
    <string name="register">Πρώτη φορά εδώ? Εγγραφή</string>
    <string name="email">E-mail</string>
    <string name="send_email">Αποστολή</string>
    <string name="signin_here">Διαθέτεις λογαριασμό?\nΣυνδέσου εδώ</string>
    <string name="submit">Εγγραφή</string>
    <string name="firmcode">Κωδικός Εταιρείας</string>
    <string name="confirmpassword">Επιβεβαίωση κωδικού</string>
    <string name="show_password">ΕΜΦΑΝΙΣΗ</string>
    <string name="hide_password">ΑΠΟΚΡΥΨΗ</string>
    <string name="pick_firm">Επιλογή Εταιρείας</string>
    <string name="home">Αρχική</string>
    <string name="your_firm">Η εταιρεία σου</string>
    <string name="total_surveys">Σύνολο \nΕρευνών</string>
    <string name="responsed_surveys">Απαντημένες \nΈρευνες</string>
    <string name="last_created_date">Ημ. δημιουργίας \nτελευταίας έρευνας</string>
    <string name="view_surveys">Δες ολες τις ερευνες</string>
    <string name="have_survey">Έχεις έτοιμη έρευνα?</string>
    <string name="have_survey_desc">Πρότεινε τη δική σου έρευνα σχετικά με το περιβάλλον εργασίας μιας επιχείρησης.</string>
    <string name="add_new">Δημιουργια νεας</string>
    <string name="note">Σημείωση: η έρευνα θα είναι διαθέσιμη προς ψήφιση αφού εγκριθεί από το διαχειριστή μέσα σε διάστημα 24 ωρών.</string>
    <string name="completed">completed</string>
    <string name="ongoing">ongoing</string>
    <string name="pending">pending</string>
    <string name="under_process">under_process</string>
    <string name="approved">approved</string>
    <string name="rejected">rejected</string>
    <string name="no_completed">Δεν υπάρχουν ολοκληρωμένες έρευνες.</string>
    <string name="no_ongoing">Δεν υπάρχουν έρευνες σε εξέλιξη.</string>
    <string name="no_pending">Δεν υπάρχουν έρευνες που εκκρεμούν.</string>
    <string name="no_approved">Δεν υπάρχουν εγκεκριμμένες έρευνες.</string>
    <string name="no_rejected">Δεν υπάρχουν απορριφθείσες έρευνες.</string>
    <string name="active_since">Ημ. Έναρξης</string>
    <string name="valid_until">Ημ. Λήξης</string>
    <string name="item_thumb">thumb</string>
    <string name="vote">Ψήφισε!</string>
    <string name="survey">Έρευνα</string>
    <string name="survey_title">survey_title</string>
    <string name="question">question</string>
    <string name="position">position</string>
    <string name="question_title">%1$d. %2$s</string>
    <string name="radio_button_label">\u0020\u0020%1$s</string>
    <string name="question_btn_id">questionBtn</string>
    <string name="arrow">arrow</string>
    <string name="page_index_text">ΕΡΩΤΗΣΗ %1$d ΑΠΟ %2$d</string>
    <string name="ranking_question_note">Σημείωση: σύρε τις μπάρες με τις απαντήσεις για να τις τοποθετήσεις με τη σειρά προτίμησης σου.</string>
    <string name="slider_question_note">Σημείωση: σύρε την ένδειξη στην μπάρα για να διαλέξεις την απάντηση σου.</string>
    <string name="free_answer_hint">Γράψε την απάντηση σου εδώ.</string>
    <string name="angry">angry</string>
    <string name="sad">sad</string>
    <string name="neutral">neutral</string>
    <string name="happy">happy</string>
    <string name="vhappy">vhappy</string>
    <string name="sdisagree">Διαφωνώ Έντονα</string>
    <string name="disagree">Διαφωνώ</string>
    <string name="neutraly">Ουδέτερα</string>
    <string name="agree">Συμφωνώ</string>
    <string name="sagree">Συμφωνώ Απολύτως</string>
    <string name="mandatory_note">* Η ερώτηση είναι υποχρεωτική.</string>
    <string name="data_parcelable_key">data</string>
    <string name="stats_title">Αποτελέσματα</string>
    <string name="details_title">Πληροφορίες</string>
    <string name="answered_by">Απάντησαν: %1$s</string>
    <string name="skipped">Παρέλειψαν: %1$s</string>
    <string name="persentage_text">%1$.1f%%</string>
    <string name="just_text">%1$s</string>
    <string name="count_per_row">Σύνολο \nανά γραμμή</string>
    <string name="sdisagree_br">Διαφωνώ \nΈντονα</string>
    <string name="sagree_br">Συμφωνώ \nΑπολύτως</string>
    <string name="no_answers">Δεν υπάρχουν απαντήσεις στην συγκεκριμένη ερώτηση.</string>
    <string name="responses_text">Αποκρίσεις: %1$s</string>
    <string name="no_answers_img">noanswersimg</string>
    <string name="chevron_right">chevron_right</string>
    <string name="type">type</string>
    <string name="total_responses">%1$d</string>
    <string name="total_responses_label">Σύνολο \nΑποκρίσεων</string>
    <string name="stats">Στατιστικά</string>
    <string name="answered_label">Απάντησαν</string>
    <string name="completion_rate_label">Ποσοστό \nσυμπλήρωσης</string>
    <string name="created_date_label">Ημ. δημιουργίας</string>
    <string name="last_modified_date_label">Ημ.τελευταίας \nτροποποίησης</string>
    <string name="category_label">Κατηγορία</string>
    <string name="questions_label">Ερωτήσεις</string>
    <string name="answered">%1$d</string>
    <string name="questions">%1$d</string>
    <string name="stats_icon">stats_icon</string>
    <string name="new_survey">Νέα Έρευνα</string>
    <string name="new_survey_title">Τίτλος έρευνας</string>
    <string name="active_since_hint">Ενεργή από</string>
    <string name="valid_until_hint">Ενεργή μέχρι</string>
    <string name="pick">Επιλογη</string>
    <string name="cancel">Ακυρωση</string>
    <string name="pick_category">Επιλογή κατηγορίας</string>
    <string name="mandatory_fields">* Υποχρεωτικά πεδία.</string>
    <string name="multiple_choice">Πολλαπλής επιλογής</string>
    <string name="satisfaction_rating">Βαθμός ικανοποίησης</string>
    <string name="slider">Ολισθητής</string>
    <string name="list_selection">Επιλογή από λίστα</string>
    <string name="ranking">Κατάταξη</string>
    <string name="free_answer">Ελεύθερη απάντηση</string>
    <string name="active_since_format">%1$d-%2$d-%3$d %4$d:00:00 UTC</string>
    <string name="valid_until_format">%1$d-%2$d-%3$d %4$d:59:59 UTC</string>
    <string name="date_format">dd-MM-yyyy HH:mm:ss zzz</string>
    <string name="edt_date_format">%1$d-%2$d-%3$d</string>
    <string name="new_question">Nέα ερώτηση</string>
    <string name="type_id">type_id</string>
    <string name="discard_dialog_title">Eίσαι σίγουρος;</string>
    <string name="question_text">Τίτλος Ερώτησης</string>
    <string name="answers">Απαντήσεις</string>
    <string name="add_answer">Προσθηκη απαντησης</string>
    <string name="required_question">Η ερώτηση είναι υποχρεωτική.</string>
    <string name="single_choice">Μονής επιλογής</string>
    <string name="save">Αποθηκευση</string>
    <string name="firm">Η Εταιρεία</string>
    <string name="results">Αποτελέσματα</string>
    <string name="notifications">Ειδοποιήσεις</string>
    <string name="settings">Ρυθμίσεις</string>
    <string name="logout">Αποσυνδεση</string>
</resources>