<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/mainActions"
        android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/firm"
            android:checked="false"
            android:checkable="true"
            android:icon="@drawable/firm"
            android:title="@string/firm" />

        <item
            android:id="@+id/surveys"
            android:checked="false"
            android:icon="@drawable/surveys"
            android:title="@string/surveys" />

        <item
            android:id="@+id/results"
            android:checked="false"
            android:icon="@drawable/results"
            android:title="@string/results" />

        <item
            android:id="@+id/notifications"
            android:checked="false"
            android:icon="@drawable/notifications"
            android:title="@string/notifications" />

    </group>

    <group
        android:id="@+id/subActions"
        android:checkableBehavior="single">

        <item
            android:id="@+id/settings"
            android:checked="false"
            android:icon="@drawable/settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/logout"
            android:checked="false"
            android:icon="@drawable/logout"
            android:title="@string/logout" />

    </group>

</menu>