<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:id="@+id/arrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/arrow_back" />

        <EditText
            android:id="@+id/edt_tool_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/search_hint"
            android:textColorHint="@color/total_responsed_surveys_desc_text_color"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:maxLines="1" />

        <ImageView
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            android:contentDescription="@string/clear" />

    </LinearLayout>


</LinearLayout>